[tool.poetry]
name = "usth-deep-learning"
version = "0.1.0"
description = ""
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
tensorflow = "^2.15.0"
keras = "^2.15.0"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
sklearn = "^0.0.post11"
h5py = "^3.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
